# jfchemistry

./: .coveragerc  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  crest.toml  crest_conformers.xyz  input.sdf  input.xyz  log  log.out  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  docs_new.yml  test.yml
.opencode/: openwork.json
.opencode/skill/workspace-guide/: SKILL.md
.openwork/templates/tmpl_interact_with_files/: template.yml
.openwork/templates/tmpl_learn_plugins/: template.yml
.openwork/templates/tmpl_learn_skills/: template.yml
.scratch/: InfinitePolymers.py  PrismPruner.py
.scratch/__marimo__/session/: PrismPruner.py.json
docs/: base_nodes.md  calculators.md  conformers.md  contributing.md  faq.md  generation.md  geometry_optimizers.md  index.md  inputs.md  modification.md  user_guide.md
docs/javascripts/: mathjax.js
docs/nodes/: base.md  conformers.md  filters.md  generation.md  geometry_optimizers.md  inputs.md  packing.md  polymers.md  singlepoint.md  utilities.md
docs/nodes/calculators/: ase.md  calculators.md  gpu4pyscf.md  orca.md  torchsim.md
docs/nodes/modifiers/: deprotonation.md  protonation.md  tautomerization.md
docs/nodes/molecular_dynamics/: torchsim.md
docs/stylesheets/: extra.css
examples/: PDMS_Polymer.py  PE_polymer.py  cid_molecule.py  conformer.xyz  conformer_ensemble_workflow.py  copolymer.py  crest.toml  crest_conformers.xyz  deprotonated.xyz  filter_test.py  final.cif  final_structure.xyz  free_energy_difference_aimnet2.py  frequency_ir_ase_aimnet2.py  frequency_ir_orca.py  frequency_ir_pyscf.py  frequency_ir_workflow.py  generated_chain.xyz  initial_structure.xyz  input.sdf  input.xyz  input_molecule.xyz  log.out  log.xyz  md.py  mmmc.py  mol.sdf  molecule.xyz  nelsons_four_point_method_aimnet2.py  opt.cif  opt.traj  pack_molecules.py  packed_structure.xyz  packmol_input.inp  partition_coefficients.py  polymer.py  redox_workflow.py  reorganization_energy_aimnet2.py  smiles_molecule.py  solvation_interface.py  (+1 more)
jfchemistry/: __init__.py  base_classes.py  base_jobs.py  jfchemistry.py
jfchemistry/calculators/: __init__.py  aimnet2_calculator.py  ase_calculator.py  base.py  crest.py  orb_calculator.py  orca_calculator.py  orca_keywords.py  tblite_calculator.py
jfchemistry/calculators/ase/: __init__.py  aimnet2_calculator.py  ase_calculator.py  fairchem_calculator.py  mace_polar1_calculator.py  orb_calculator.py  tblite_calculator.py
jfchemistry/calculators/crest/: __init__.py  crest_calculator.py
jfchemistry/calculators/orca/: __init__.py  orca_calculator.py  orca_keywords.py
jfchemistry/calculators/pyscfgpu/: __init__.py  pyscfgpu_calculator.py
jfchemistry/calculators/torchsim/: __init__.py  base.py  fairchem_calculator.py  fairchem_ts_calculator.py  orb_calculator.py  orb_ts_calculator.py  torchsim_calculator.py
jfchemistry/conformers/: __init__.py  base.py  censo.py  crest.py  goat.py  mmmc.py
jfchemistry/core/: __init__.py  jfchem_job.py  outputs.py  properties.py  provenance.py  solvation.py  structures.py  unit_utils.py  units.py
jfchemistry/core/makers/: __init__.py  base_maker.py  core_maker.py  ensemble_maker.py  jfchem_maker.py  new_ensemble_maker.py  pymatgen_base_maker.py  single_maker.py  single_molecule.py  single_rdmolecule.py  single_structure.py  single_structure_calculator.py  single_structure_molecule.py
jfchemistry/filters/: __init__.py  base.py  energy_filter.py  prism_filter.py
jfchemistry/filters/energy/: __init__.py  energy_filter.py
jfchemistry/filters/structural/: __init__.py  base.py  prism_filter.py
jfchemistry/generation/: __init__.py  base.py  rdkit_generation.py
jfchemistry/inputs/: __init__.py  core.py  nodes.py  polymer.py  pubchem.py  smiles.py
jfchemistry/modification/: __init__.py  base.py  crest_deprotonation.py  crest_protonation.py  crest_tautomers.py  molbar_screening.py
jfchemistry/modification/deprotonation/: __init__.py  base.py  crest_deprotonation.py
jfchemistry/modification/protonation/: __init__.py  base.py  crest_protonation.py
jfchemistry/modification/tautomerization/: crest_tautomers.py
jfchemistry/modification/tautomers/: __init__.py  base.py  crest_tautomers.py
jfchemistry/molecular_dynamics/: base.py
jfchemistry/molecular_dynamics/ase/: base.py
jfchemistry/molecular_dynamics/torchsim/: __init__.py  base.py
jfchemistry/optimizers/: __init__.py  aimnet2.py  aimnet2_optimizer.py  ase.py  ase_optimizer.py  base.py  orb.py  orb_optimizer.py  orca.py  tblite.py  tblite_optimizer.py  torchsim.py
jfchemistry/optimizers/ase/: __init__.py  aimnet2.py  ase.py  fairchem.py  orb.py  (+1 more)
jfchemistry/packing/: __init__.py  base.py  packmol.py
jfchemistry/polymers/: __init__.py  extract_chains.py  extract_units.py  finite_chain.py  generation.py  generator.py  input.py
jfchemistry/properties/: __init__.py
jfchemistry/single_point/: __init__.py  aimnet2.py  ase.py  base.py  orb.py  orca.py  pyscfgpu.py  tblite.py  torchsim.py
jfchemistry/utilities/: __init__.py  combine_molecules.py  properties_to_disk.py  rotate_molecule.py  save_to_disk.py  translate_molecule.py
jfchemistry/utils/: __init__.py  bulk_jobs.py
jfchemistry/workflows/: __init__.py  partition_coefficient.py
scripts/: precommit-pixi-run.sh
setup/: activate.sh
tests/: __init__.py  test_properties_to_disk.py  test_provenance.py  test_pyscf_mode_selection.py  test_pyscfgpu_lazy_import.py  test_solvation_adapters.py  test_solvation_integration.py  test_stub.py
tests/calculators/: test_mace_polar1_calculator.py
tests/polymers/: test_copolymer_chain.py  test_extract_chains.py  test_extract_units.py
tests/workflows/: test_conformer_ensemble_workflow.py  test_free_energy_difference_workflow.py  test_frequency_ir_ase_workflow.py  test_frequency_ir_orca_workflow.py  test_frequency_ir_pyscf_workflow.py  test_frequency_ir_workflow.py  test_nelsons_four_point_method.py  test_partition_coefficient_workflow.py  test_redox_workflow.py  test_reorganization_energy_workflow.py
(+58 files in other folders)
