[project]
name = "jfchemistry"
description = "JFChemistry"
license = { file = "LICENSE" }
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{ name = "Carson Farmer" }]
requires-python = ">=3.12"
dependencies = [
    "multiple-minimum-monte-carlo>=0.0.9,<0.0.10",
    "tomli-w>=1.2.0,<2",
    "icecream>=2.1.8,<3",
    "orca-pi@git+https://github.com/faccts/opi.git",
    "fireworks>=2.0.6,<3",
    "molbar>=1.1.3,<2",
    "prism-pruner@git+https://github.com/ntampellini/prism_pruner.git",
    "periodictable>=2.0.2,<3",
    "fairchem-core>=2.11.0,<3",
    "aimnet@git+https://github.com/cfarm6/aimnetcentral.git@numpy2.0",
    "orb_models@git+https://github.com/orbital-materials/orb-models.git",
    "torch>=2.7.0,<3",
    "torch-sim-atomistic>=0.4.0,<0.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
ase = ">=3.26.0,<4"
cuda = ">=13.0.2,<14"
cuda-nvrtc = ">=13.0.88,<14"
crest = ">=3.0.2,<4"
gcc = ">=15.2.0,<15.3"
gfortran = ">=15.2.0,<15.3"
icecream = ">=2.1.8,<3"
jobflow = ">=0.2.0,<0.3"
networkx = "==3.1"
openbabel = ">=3.1.1,<4"
packmol = ">=21.1.2,<22"
python = ">=3.12,<3.14"
pymatgen = ">=2025.10.7,<2026"
pip = ">=25.2,<26"
rich = "<14"
tblite = ">=0.4.0,<0.5"
tblite-python = ">=0.4.0,<0.5"
numpy = "==2.2.6"
rdkit = ">=2025.9.2,<2026"

[tool.pixi.pypi-dependencies]
jfchemistry = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }


[tool.pixi.feature.dev.tasks]
fmt = { cmd = "ruff format ." }
lint = { cmd = "ruff check . --fix" }
types = { cmd = "ty check" }
test = { cmd = "pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
pytest-xdist = "*"


[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"
marimo = "*"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocs-material = "*"
mkdocs = ">=1.6.1,<2"
mkdocstrings-python = "*"

[tool.pixi.feature.docs.tasks]
build_docs = { cmd = "mkdocs gh-deploy --config-file ./mkdocs.yml --force" }
all = { depends-on = ["build_docs"] }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming conventions
    "W",      # pycodestyle warnings
    "C4",     # comprehensions
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "TCH",    # type-checking imports
    "RUF",    # Ruff-specific rules
    "RSE",    # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    # "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    # "PLR0913", # Too many arguments to function call
    # "PLR0914", # Too many locals
    # "PLR0915", # Too many statements
    # "PLR1702", # Too many nested-blocks
    "PLC0415", # Import-outside-top-level
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests", "jfchemistry"]
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["marimo[recommended]>=0.17.7,<0.18"]
