[project]
name = "jfchemistry"
description = "JFChemistry"
license = { file = "LICENSE" }
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{ name = "Carson Farmer" }]
requires-python = ">=3.13"
dependencies = [
    "multiple-minimum-monte-carlo>=0.0.9,<0.0.10",
    "tomli-w>=1.2.0,<2",
    "icecream>=2.1.8,<3",
    "orca-pi>=1.0.1",
    "fireworks>=2.0.6,<3",
    # "molbar@git+https://git.rwth-aachen.de/bannwarthlab/molbar.git@dev",
    "prism-pruner",
    "periodictable>=2.0.2,<3",
    "fairchem-core>=2.11.0,<3",
    # "aimnet@git+https://github.com/cfarm6/aimnetcentral.git@numpy2.0",
    "aimnet[ase]@git+https://github.com/isayevlab/aimnetcentral.git",
    "orb-models>=0.5.5,<0.6",
    "torch>=2.7.0,<3",
    "torch-sim-atomistic>=0.4.0,<0.5",
    "gpu4pyscf-cuda13x>=1.5.1,<2",
    "cutensor-cu13>=2.4.1,<3",
    "ty",
    "microsoft-skala>=1.1.0,<2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.system-requirements]
cuda = "13.0"

[tool.pixi.workspace]
channels = ["nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.13"
ase = ">=3.26.0,<4"
crest = ">=3.0.2,<4"
jobflow = ">=0.2.1,<0.3"
networkx = "==3.1"
packmol = ">=21.1.2,<22"
pymatgen = ">=2025.10.7,<2026"
rich = "<14"
tblite = ">=0.5.0,<0.6"
tblite-python = ">=0.5.0,<0.6"
gfortran = ">=14.3.0,<14.4"
rdkit = ">=2025.9.3,<2026"
pint = ">=0.25.2,<0.26"
cuda = ">=13, <14"
cuda-nvrtc = ">=13.1.80,<14"
cupy = ">=13.6.0,<14"
numpy = "<2.4.0"
nwchem = ">=7.3.1,<8"

[tool.pixi.pypi-options.dependency-overrides]
dm-tree = ">= 0.1.9,<0.2"
gpu4pyscf-libxc-cuda13x = "==0.7"
numpy = "<2.4.0"
ase = ">=3.26.0,<4"

[tool.pixi.pypi-dependencies]
jfchemistry = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
development = { features = ["development"], solve-group = "default" }
documentation = { features = ["documentation"], solve-group = "default" }


[tool.pixi.feature.development.tasks]
fmt = { cmd = "ruff format ." }
lint = { cmd = "ruff check . --fix" }
types = { cmd = "ty check" }
test = { cmd = "pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.development.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
pytest-xdist = "*"
marimo = "*"

[tool.pixi.feature.development.pypi-dependencies]
ty = "*"
pymatviz = "*"
[tool.pixi.feature.documentation.pypi-dependencies]
zensical = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.feature.documentation.tasks]
build_docs = { cmd = "mkdocs gh-deploy --config-file ./mkdocs.yml --force" }
all = { depends-on = ["build_docs"] }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-14naming conventions
    "W",      # pycodestyle warnings
    "C4",     # comprehensions
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "TCH",    # type-checking imports
    "RUF",    # Ruff-specific rules
    "RSE",    # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    # "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    # "PLR0913", # Too many arguments to function call
    # "PLR0914", # Too many locals
    # "PLR0915", # Too many statements
    # "PLR1702", # Too many nested-blocks
    "PLC0415", # Import-outside-top-level
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests", "jfchemistry"]
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
