[project]
name = "jfchemistry"
description = "JFChemistry"
license = { file = "LICENSE" }
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{ name = "Carson Farmer" }]
requires-python = ">=3.13"
dependencies = [
    "tomli-w>=1.2.0,<2",
    "numpy",
    "ty",
    "pint>=0.25.2,<0.26",
    "jobflow>=0.3",
    "networkx>=3.1",
    "rdkit>=2025.9.3,<2026",
    "pymatgen>=2025.10.7,<2026",
    "ase>=3.26.0,<4",
    "multiple-minimum-monte-carlo>=0.0.12",
    "prism-pruner",
    "periodictable>=2.0.2,<3",
    "fairchem-core>=2.14,<3",
    "aimnet[ase]",
    "orb-models>=0.5.5,<0.6",
    "torch-sim-atomistic>=0.5.0,<0.6",
    "gpu4pyscf-cuda13x>=1.5.1,<2",
    "orca-pi>=1.0.1",
    "microsoft-skala>=1.1.0,<2",
    "cutensor-cu13>=2.4.1,<3",
    "joltqc @ git+https://github.com/ByteDance-Seed/JoltQC.git",
    "cupy-cuda13x>=13.6.0,<14", "monty>=2025.3.3,<2026",
    "torchtnt @ git+https://github.com/meta-pytorch/tnt.git"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.system-requirements]
cuda = "13.0"


[tool.pixi.activation]
scripts = ["setup/activate.sh"]

[tool.pixi.workspace]
channels = [ "conda-forge", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.13"
pip = ">=26.0.1,<27"
cuda = ">=13, <14"
cuda-nvrtc = ">=13.1.115,<14"
gfortran = ">=14.3.0,<14.4"
cupy = ">=13.6.0,<14"
xtb = ">=6.7"
crest = ">=3.0.2,<4"
packmol = ">=21.1.2,<22"
tblite = ">=0.4.0,<0.5"
tblite-python = ">=0.4.0,<0.5"
setuptools = "<81.0.0"



[tool.pixi.pypi-options.dependency-overrides]
dm-tree = ">= 0.1.9,<0.2"
numpy = "<2.5"
gpu4pyscf-libxc-cuda13x = "==0.7"

[tool.pixi.pypi-dependencies]
jfchemistry = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
development = { features = ["development"], solve-group = "default" }
documentation = { features = ["documentation"], solve-group = "default" }


[tool.pixi.feature.development.tasks]
fmt = { cmd = "ruff format ." }
lint = { cmd = "ruff check . --fix" }
types = { cmd = "ty check" }
test = { cmd = "pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.development.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
pytest-xdist = "*"

[tool.pixi.feature.development.pypi-dependencies]
ty = "*"

[tool.pixi.feature.documentation.pypi-dependencies]
zensical = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.feature.documentation.tasks]
build_docs = { cmd = "mkdocs gh-deploy --config-file ./mkdocs.yml --force" }
all = { depends-on = ["build_docs"] }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",      # bugbear
    "D",      # pydocstyle
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-14naming conventions
    "W",      # pycodestyle warnings
    "C4",     # comprehensions
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "TCH",    # type-checking imports
    "RUF",    # Ruff-specific rules
    "RSE",    # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    # "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    # "PLR0913", # Too many arguments to function call
    # "PLR0914", # Too many locals
    # "PLR0915", # Too many statements
    # "PLR1702", # Too many nested-blocks
    "PLC0415", # Import-outside-top-level
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests", "jfchemistry"]
addopts = "--doctest-modules --doctest-continue-on-failure"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.hatch.build.targets.wheel]
packages = ["jfchemistry"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
development = ["marimo>=0.20,<0.30", "altair>=6.0.0,<7", "matplotlib>=3.10.8,<4"]
